[gd_scene load_steps=3 format=2]

[ext_resource path="res://mods/CertifiedPyro.TunaGuitar/Scenes/ModMenu/mod_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]

[node name="TunaGuitarModMenu" type="Control"]
show_behind_parent = true
anchor_left = 0.027
anchor_top = 0.4
anchor_right = 0.147
anchor_bottom = 0.77
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 1.00405 )
custom_constants/separation = 8

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_right = 230.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Load"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 230.0
margin_bottom = 76.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Save"

[node name="SaveAsButton" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 230.0
margin_bottom = 118.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Save As..."

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 230.0
margin_bottom = 160.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Settings"

[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
